tests/errors/ellipsis_syntax_5.pyx
# mode: error

[
    None,
    .
    .

    .
]

_ERRORS = u"""
5: 4: Expected an identifier or literal
"""
